# pa-py-rs

./: README.md  README.pypi.md  pyproject.toml
src/pa_py_rs/: __init__.py  panic.py  result.py
