[project]
name = "pa-py-rs"
version = "0.1.1"
description = "A Python module that brings ergonomic, Rust-inspired utilities like Result, and panics to Python"
readme = { file = "README.pypi.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "lalitm1004", email = "lalitm1004@gmail.com" }]
requires-python = ">=3.7"
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/lalitm1004/pa-py-rs"
Issues = "https://github.com/lalitm1004/pa-py-rs/issues"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
